# searchconsole-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
searchconsole_mcp/: server.py  tools.py
tests/: test_tools.py
