[project]
name = "searchconsole-mcp"
version = "0.1.0"
description = "MCP server for Google Search Console — query keywords, pages, sitemaps, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Chris Hart" }]
keywords = ["mcp", "google-search-console", "seo", "search-console", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "google-auth>=2.40",
    "google-api-python-client>=2.0",
]

[project.urls]
Homepage = "https://github.com/chrishart0/searchconsole-mcp"
Repository = "https://github.com/chrishart0/searchconsole-mcp"
Issues = "https://github.com/chrishart0/searchconsole-mcp/issues"

[project.scripts]
searchconsole-mcp = "searchconsole_mcp.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
